{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 54,
  "lineage": "15ffcf8d-26b0-64e7-5e8c-e4df5e320e44",
  "resources": [
    {
      "module": "module.vm[\"transit_vpc\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:797433456563:security-group/sg-0b70e1a5b35800147",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b70e1a5b35800147",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "3.12.120.121/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "transit_vpc_oregon_vpc_priv_sg",
            "name_prefix": "",
            "owner_id": "797433456563",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "transit_vpc_oregon_private_security_group",
              "prefix": "transit_vpc_oregon"
            },
            "tags_all": {
              "Name": "transit_vpc_oregon_private_security_group",
              "prefix": "transit_vpc_oregon"
            },
            "timeouts": null,
            "vpc_id": "vpc-88ecddf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vm.data.http.myip"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"transit_vpc\"]",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "transit_vpc_default_rtable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:797433456563:route-table/rtb-0c81fd3cf8f3f3fe9",
            "default_route_table_id": "rtb-0c81fd3cf8f3f3fe9",
            "id": "rtb-0c81fd3cf8f3f3fe9",
            "owner_id": "797433456563",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "transit_vpc_oregon_default_rtable",
              "prefix": "transit_vpc_oregon"
            },
            "tags_all": {
              "Name": "transit_vpc_oregon_default_rtable",
              "prefix": "transit_vpc_oregon"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c9d6e7c6f770b44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"transit_vpc\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:797433456563:internet-gateway/igw-001ca18fe8d7093ca",
            "id": "igw-001ca18fe8d7093ca",
            "owner_id": "797433456563",
            "tags": {
              "Name": "transit_vpc_oregon_igw",
              "prefix": "transit_vpc_oregon"
            },
            "tags_all": {
              "Name": "transit_vpc_oregon_igw",
              "prefix": "transit_vpc_oregon"
            },
            "vpc_id": "vpc-07c9d6e7c6f770b44"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"transit_vpc\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:797433456563:route-table/rtb-0f561890264725132",
            "id": "rtb-0f561890264725132",
            "owner_id": "797433456563",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "3.12.120.121/32",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001ca18fe8d7093ca",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "transit_vpc_oregon_private_subnet1_rtable_z1",
              "prefix": "transit_vpc_oregon"
            },
            "tags_all": {
              "Name": "transit_vpc_oregon_private_subnet1_rtable_z1",
              "prefix": "transit_vpc_oregon"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c9d6e7c6f770b44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.http.myip"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:797433456563:route-table/rtb-0993b22413dd5fd6e",
            "id": "rtb-0993b22413dd5fd6e",
            "owner_id": "797433456563",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "3.12.120.121/32",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001ca18fe8d7093ca",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "transit_vpc_oregon_private_subnet2_rtable_z2",
              "prefix": "transit_vpc_oregon"
            },
            "tags_all": {
              "Name": "transit_vpc_oregon_private_subnet2_rtable_z2",
              "prefix": "transit_vpc_oregon"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c9d6e7c6f770b44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.http.myip"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"transit_vpc\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0723bd23a9684530d",
            "route_table_id": "rtb-0f561890264725132",
            "subnet_id": "subnet-0bc0b897a48f256e0"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.http.myip"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0789b7618dcc27808",
            "route_table_id": "rtb-0993b22413dd5fd6e",
            "subnet_id": "subnet-068148295142d9d3c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.http.myip"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"transit_vpc\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:797433456563:subnet/subnet-0bc0b897a48f256e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.110.0.0/24",
            "id": "subnet-0bc0b897a48f256e0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "797433456563",
            "tags": {
              "Name": "transit_vpc_oregon_private_subnet1_z1",
              "prefix": "transit_vpc_oregon"
            },
            "tags_all": {
              "Name": "transit_vpc_oregon_private_subnet1_z1",
              "prefix": "transit_vpc_oregon"
            },
            "vpc_id": "vpc-07c9d6e7c6f770b44"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:797433456563:subnet/subnet-068148295142d9d3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.110.3.0/24",
            "id": "subnet-068148295142d9d3c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "797433456563",
            "tags": {
              "Name": "transit_vpc_oregon_private_subnet2_z2",
              "prefix": "transit_vpc_oregon"
            },
            "tags_all": {
              "Name": "transit_vpc_oregon_private_subnet2_z2",
              "prefix": "transit_vpc_oregon"
            },
            "vpc_id": "vpc-07c9d6e7c6f770b44"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"transit_vpc\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:797433456563:vpc/vpc-07c9d6e7c6f770b44",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.110.0.0/16",
            "default_network_acl_id": "acl-0bc1c72ed90af2812",
            "default_route_table_id": "rtb-0c81fd3cf8f3f3fe9",
            "default_security_group_id": "sg-02fb04c20d634ebc4",
            "dhcp_options_id": "dopt-edd5fb95",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07c9d6e7c6f770b44",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c81fd3cf8f3f3fe9",
            "owner_id": "797433456563",
            "tags": {
              "Name": "transit_vpc_oregon_vpc",
              "prefix": "transit_vpc_oregon"
            },
            "tags_all": {
              "Name": "transit_vpc_oregon_vpc",
              "prefix": "transit_vpc_oregon"
            }
          }
        }
      ]
    }
  ]
}